syntax = "proto3";

package auth;

service AuthService {
  rpc ValidateToken (TokenRequest) returns (TokenResponse);
}

message TokenRequest {
  string token = 1;
}

message TokenResponse {
  bool valid = 1;
  string message = 2;
}
